--- a/style.css
+++ b/style.css
@@ -6,9 +6,21 @@ body {
 }
 
 .header,
+.section,
+.images,
+.quote,
+.signup,
 .footer {
+    padding: 0 100px;
     display: flex;
-    background-color: #1f2937;
+}
+
+
+.header,
+.footer,
+.section {
+    background-color: #1F2937;
+
 }
 
 .first {
@@ -28,7 +40,8 @@ ul {
 }
 
 ul,
-.subtext {
+.subtext,
+.copyright {
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -43,6 +56,10 @@ button,
     background-color: #3882F6;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+}
 h3 {
     font-size: 36px;
     font-weight: bolder;
@@ -58,3 +75,11 @@ h3 {
     font-style: italic;
 }
 
+h3,
+h4 {
+    margin: 0;
+}
+
+.footer {
+    justify-content: center;
+}
