--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: roboto;
+    min-height: 100vh;
 }
 
 .header,
@@ -35,7 +36,10 @@ main {
 
 ul {
     margin: 0;
+    padding: 0;
     display: flex;
+    gap: 20px;
+    align-items: center;
     list-style-type: none;
 }
 
@@ -66,10 +70,23 @@ h3 {
     color: #1F2937;
 }
 
+.images {
+    height: 200px;
+}
+
+.section {
+    justify-content: center;
+}
+
 .quote {
+    flex-direction: column;
     background-color: #E5E7EB; 
 }
 
+.author {
+    display: flex;
+    justify-content: flex-end;
+}
 .info {
     font-size: 36px;
     font-style: italic;
@@ -80,6 +97,16 @@ h4 {
     margin: 0;
 }
 
+.header {
+    justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 100px;
+}
+
+.block {
+    max-width: 50vh;
+}
 .footer {
     justify-content: center;
+    align-items: flex-end;
 }
