--- a/style.css
+++ b/style.css
@@ -4,20 +4,22 @@ body {
     flex-direction: column;
     font-family: roboto;
     height: 100vh;
+    justify-content: space-between;
 }
 
+.first,
 .header,
 .section,
 .images,
 .quote,
 .signup,
 .footer {
-    padding: 0 100px;
+    padding: 0 200px;
     display: flex;
 }
 
 
-.header,
+.first,
 .footer,
 .section {
     background-color: #1F2937;
@@ -25,15 +27,63 @@ body {
 }
 
 .first {
-    width: 300px;
-    height: auto;
+    flex-direction: column;
+    padding: 10px 0 100px 0;
+    gap: 75px;
+
 }
-main {
+
+.header {
+    justify-content: space-between;
+}
+
+.section {
+    justify-content: space-between;
+}
+.block {
+    width: 50vh;
+}
+web {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
 }
 
+.subtext {
+    margin-bottom: 10px;
+}
+
+button {
+    color: white;
+    padding: 5px 30px;
+    border-radius: 5px;
+    border: none;
+}
+
+.cat {
+    width: 300px;
+    height: auto;
+}
+
+.images {
+    flex-direction: column;
+}
+
+.pictures {
+    display: flex;
+}
+h3 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
+}
+
+div img {
+    border: blue;
+    height: 100px;
+    width: 100px;
+}
 ul {
     margin: 0;
     padding: 0;
@@ -63,50 +113,38 @@ button,
 .container {
     display: flex;
     justify-content: center;
-}
-h3 {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1F2937;
+    border-radius: 5px;
+    padding: 20px 30px;
 }
 
-.images {
-    height: 200px;
-}
-
-.section {
-    justify-content: center;
-}
 
 .quote {
     flex-direction: column;
     background-color: #E5E7EB; 
+    padding-top: 70px;
+    padding-bottom: 70px; 
+}
+
+.info {
+    font-size: 36px;
+    font-style: oblique;
+}
+
+.info {
+    color: #1F2937;
 }
 
 .author {
-    display: flex;
-    justify-content: flex-end;
-}
-.info {
-    font-size: 36px;
-    font-style: italic;
+    font-weight: bold;
+    text-align: right;
 }
 
-h3,
-h4 {
-    margin: 0;
+.signup {
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
-.header {
-    justify-content: space-between;
-    padding-top: 10px;
-    padding-bottom: 100px;
-}
-
-.block {
-    max-width: 50vh;
-}
-.footer {
-    justify-content: center;
-    align-items: flex-end;
+.white {
+    border-style: solid;
+    border-color: white;
 }
