--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .quote,
 .signup,
 .footer {
-    padding: 0 200px;
+    padding: 0 300px;
     display: flex;
 }
 
@@ -67,11 +67,29 @@ button {
 
 .images {
     flex-direction: column;
+    padding-bottom: 50px;
 }
 
 .pictures {
     display: flex;
+    justify-content: space-between;
 }
+
+.pic1,
+.pic2,
+.pic3,
+.pic4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.cap {
+    text-align: center;
+    width: 100px;
+}
+
 h3 {
     font-size: 36px;
     font-weight: bolder;
@@ -79,10 +97,11 @@ h3 {
     text-align: center;
 }
 
-div img {
-    border: blue;
-    height: 100px;
-    width: 100px;
+div.pictures img {
+    border: 5px solid blue;
+    border-radius: 5px;
+    height: 150px;
+    width: 150px;
 }
 ul {
     margin: 0;
@@ -112,9 +131,10 @@ button,
 
 .container {
     display: flex;
-    justify-content: center;
+    gap: 50px;
     border-radius: 5px;
-    padding: 20px 30px;
+    padding: 30px 90px;
+
 }
 
 
@@ -140,6 +160,7 @@ button,
 }
 
 .signup {
+    justify-content: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -147,4 +168,18 @@ button,
 .white {
     border-style: solid;
     border-color: white;
+}
+
+.footer {
+    justify-content: center;
+    padding: 30px 0;
+}
+
+.reminder {
+    color: white;
+}
+
+.action {
+    font-size: 24px;
+    font-weight: bold;
 }
